# cs5500-final-backend

./: .dmypy.json  .dockerignore  .env.example  .env.example.docker  .env.example.prod  .gitignore  .pre-commit-config.yaml  API_ENDPOINTS.md  DATABASE_MIGRATION_GUIDE.md  Dockerfile  Dockerfile.dev  Makefile  POSTMAN_MANUAL_TESTING.md  README.md  SETUP_EC2.md  alembic.ini  dev.db  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  main.py  pyproject.toml  start-docker.sh  test.db
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0f5cd2e44944_expand_learning_profiles_and_activities.py  3cedd7de2dc4_add_creator_tracking_to_surveys.py  45d8d83c4e9b_initial_migration.py  4ed757452705_increase_join_token_length.py  56dc1ae30b44_initial_schema.py  7b3e36c35608_add_is_auto_to_course_recommendations.py  80f87c814130_add_student_authentication_and_update_.py  add_creator_name_to_survey_templates.py  bb4ac7a51c19_refactor_models_to_use_string_uuids.py  cdb7fdd0ba2c_fix_guest_name_nullable.py  dc82de562551_add_guest_id_to_submissions.py  f69a8eb6dc62_add_survey_templates_and_update_sessions.py  rename_survey_templates_to_surveys.py
alembic/versions_backup/: add_total_scores_to_submissions.py
app/: db.py  main.py
app/api/: deps.py
app/core/: config.py  security.py
app/models/: __init__.py  activity.py  activity_type.py  class_session.py  course.py  course_recommendation.py  course_student_profile.py  student.py  submission.py  survey_template.py  teacher.py
app/routers/: auth.py  students.py
app/schemas/: __init__.py  activity.py  activity_type.py  admin.py  (+9 more)
postman_test/: Test whole flow.postman_collection.json
scripts/: README.md  check_db_state.py  clean_db.py  init-db.sql  seed.py  seed_deploy.py  seed_deploy_test.py
tests/: README.md  __init__.py  test_all_endpoints.py  test_api.py  test_health.py  test_services.py
(+16 files in other folders)
