[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "psycopg>=3.0.0",
    "alembic>=1.13.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "email-validator>=2.0.0",
    "gunicorn>=21.0.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "types-requests>=2.32.4.20250913",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
# General settings
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
# Linter-specific options
select = ["E", "F", "I"]

[tool.mypy]
# Target Python version
python_version = "3.11"

# Enable strict type checking
strict = true

# Ignore missing type hints from external libraries
ignore_missing_imports = true

# Do not allow functions without type annotations
disallow_untyped_defs = true

# Ignore specific error types for external libraries
disable_error_code = ["misc", "no-any-return"]

# Exclude migration files from type checking
exclude = [
    "alembic/versions/.*\\.py$"
]

[tool.pytest.ini_options]
# Custom markers
markers = [
    "database: marks tests as requiring a database connection",
]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
